--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="#education" onclick="currentSlide(3)">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#works" onclick="currentSlide(4)">PortfolioS</a>
+                    <a class="nav-link" href="#works" onclick="currentSlide(4)">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" onclick="currentSlide(5)">Contact</a>
