--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nazifa|CV, Resume, Portfolio</title>
     <!-- Google Fonts CDN-->
-    <link href="https://fonts.googleapis.com/css?family=Stylish|Sofia" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Stylish|Sofia|Rasa" rel="stylesheet">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
 	<!-- Animate CSS -->
