--- a/assets/index.html
+++ b/assets/index.html
@@ -47,7 +47,7 @@
 
     <!-- Navigation Strats Here
     =========================== -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light" style="background: #e6e6e6;">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-light">
         <a class="navbar-brand logo" href="#">Resume</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
