--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     <aside>
                         <div class="personal-info wow animated fadeInLeft">
                             <img src="assets/images/pp.jpg" alt="dp">
+                            <p></p>
                             <div class="info">
                                 <h2>Nazifa Rashid</h2>
                                 <div id="typed-strings">
@@ -164,74 +165,98 @@
                                     <h3><span>m</span>y skiils &amp; education</h3>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-6 col-lg-6 col-sm-12 col-12">
+                                    <div class="col-12">
                                         <div id="skills">
                                             <div class="row">
-                                                <div class="col-6 text_">Html5</div>
-                                                <div class="col-6 text-right">98%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar html progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text_">CSS3</div>
-                                                <div class="col text-right">98%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar css progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text_">SASS</div>
-                                                <div class="col text-right">90%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar sass progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text_">Bootatrap 4</div>
-                                                <div class="col text-right ">95%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar bootstrap progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text_">jQuery</div>
-                                                <div class="col text-right">90%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar jquery progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="col-md-4 col-sm-12 col-lg-4 col-12">
+                                                    <div class="row">
+                                                        <div class="col-6 text_">Html5</div>
+                                                        <div class="col-6 text-right">98%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar html progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4 col-sm-12 col-lg-4 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">CSS3</div>
+                                                        <div class="col text-right">98%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar css progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4 col-sm-12 col-lg-4 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">SASS</div>
+                                                        <div class="col text-right">90%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar sass progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col text_">JavaScript</div>
-                                                <div class="col text-right">60%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar js progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="col lg-4 col-md-4 col-sm-12 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">Bootatrap 4</div>
+                                                        <div class="col text-right ">95%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar bootstrap progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="col lg-4 col-md-4 col-sm-12 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">jQuery</div>
+                                                        <div class="col text-right">90%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar jquery progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="col lg-4 col-md-4 col-sm-12 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">JavaScript</div>
+                                                        <div class="col text-right">60%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar js progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col text_">PHP</div>
-                                                <div class="col text-right">50%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar php progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text_">MySQL</div>
-                                                <div class="col text-right">60%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar db progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text_">C/C++</div>
-                                                <div class="col text-right">50%</div>
-                                            </div>
-                                            <div class="progress" style="height: 10px;">
-                                                <div class="progress-bar c progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">PHP</div>
+                                                        <div class="col text-right">50%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar php progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">MySQL</div>
+                                                        <div class="col text-right">60%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar db progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                                                    <div class="row">
+                                                        <div class="col text_">C/C++</div>
+                                                        <div class="col text-right">50%</div>
+                                                    </div>
+                                                    <div class="progress" style="height: 10px;">
+                                                        <div class="progress-bar c progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-lg-6 col-sm-12 col-12">
+                                    <div class="col-12">
                                         <div id="education">
                                             <div class="accordion" id="accordionExample">
                                                 <div class="card">
